--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 
 <h1>
 <ul>
-    <li>test link: 
-      <a href=https://app.adjust.com/1ia8bo>https://app.adjust.com/1ia8bo</a> 
+    <li>test_link_202409: 
+      <a href=https://app.adjust.com/s7tyru>https://app.adjust.com/s7tyru</a> 
       </li>
-    <li>test link 01：
-      <a href=https://app.adjust.com/1ia8bo?campaign=cp01>https://app.adjust.com/1ia8bo?campaign=cp01</a>
+    <li>test_link_202409 + cp01：
+      <a href=https://app.adjust.com/s7tyru?campaign=cp01>https://app.adjust.com/s7tyru?campaign=cp01</a>
 </ul>
     </h1>
   </body>
