--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <h1>
 <ul>
     <li>test_link_202409: 
-      <a href=https://app.adjust.com/s7tyru>https://app.adjust.com/s7tyru</a> 
+      <a href=https://app.adjust.com/1g65qlyv>https://app.adjust.com/1g65qlyv</a> 
       </li>
     <li>test_link_202409 + cp01：
-      <a href=https://app.adjust.com/s7tyru?campaign=cp01>https://app.adjust.com/s7tyru?campaign=cp01</a>
+      <a href=https://app.adjust.com/1g65qlyv?campaign=cp01>https://app.adjust.com/1g65qlyv?campaign=cp01</a>
 </ul>
     </h1>
   </body>
